--- a/static/css/style-mobile.css
+++ b/static/css/style-mobile.css
@@ -8,33 +8,58 @@
 
 /* layout
 --------------------*/
+
 .header {
-  padding: 72px 16px;
+  margin: 0 0 40px;
 }
+
 .main {
   padding: 0 16px;
 }
 
 
+/* block
+--------------------*/
+
+.section__head {
+  font-size: 2.2rem;
+}
+
+.block-flex {
+  display: flex;
+  align-items: baseline;
+  gap: 40px;
+}
+
+
 /* card
 --------------------*/
+
 .card-wrap {
   gap: 16px;
 }
 .card {
   width: 100%;
 }
-
-
-/* title
---------------------*/
-.title-h3 {
-  font-size: 3rem;
+.card__head {
+  font-size: 2.2rem;
+  margin: 0 0 16px;
 }
 
 
 /* text
 --------------------*/
+
+.text-through {
+  font-size: 1.8rem;
+}
+.block-flex > .text-through:after {
+  content: "→";
+  position: absolute;
+  display: inline-block;
+  margin: 0 12px;
+}
+
 .text-price {
-  font-size: 2.6rem;
+  font-size: 2.4rem;
 }
