--- a/static/css/style-mobile.css
+++ b/static/css/style-mobile.css
@@ -10,7 +10,7 @@
 --------------------*/
 
 .header {
-  margin: 0 0 40px;
+  margin: 0 0 48px;
   background-size: contain;
 }
 
@@ -22,6 +22,9 @@
 /* block
 --------------------*/
 
+.section--m {
+  margin: 0 0 40px;
+}
 .section__head {
   font-size: 2.2rem;
 }
